   timing-sensitive tasks like pausing containers. Side effect: before/after command hooks now run
   once for each configured repository instead of once per configuration file. Additionally, the
   "repositories" interpolated variable has been changed to "repository", containing the path to the
   current repository for the hook.
 * #516: Fix handling of TERM signal to exit borgmatic, not just forward the signal to Borg.
 * #517: Fix borgmatic exit code (so it's zero) when initial Borg calls fail but later retries
   succeed.
 * Change Healthchecks logs truncation size from 10k bytes to 100k bytes, corresponding to that
   same change on Healthchecks.io.

1.5.24
 * #431: Add "working_directory" option to support source directories with relative paths.
 * #444: When loading a configuration file that is unreadable due to file permissions, warn instead
   of erroring. This supports running borgmatic as a non-root user with configuration in ~/.config
   even if there is an unreadable global configuration file in /etc.
 * #469: Add "repositories" context to "before_*" and "after_*" command action hooks. See the
   documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/add-preparation-and-cleanup-steps-to-backups/
 * #486: Fix handling of "patterns_from" and "exclude_from" options to error instead of warning when
   referencing unreadable files and "create" action is run.
 * #507: Fix Borg usage error in the "compact" action when running "borgmatic --dry-run". Now, skip
   "compact" entirely during a dry run.

1.5.23
 * #394: Compact repository segments and free space with new "borgmatic compact" action. Borg 1.2+
   only. Also run "compact" by default when no actions are specified, as "prune" in Borg 1.2 no
   longer frees up space unless "compact" is run.
 * #394: When using the "atime", "bsd_flags", "numeric_owner", or "remote_rate_limit" options,
   tailor the flags passed to Borg depending on the Borg version.